(Fix) Adjustments to Form Paddings to align with Adjacent Buttons

--- a/components/button.css
+++ b/components/button.css
@@ -15,7 +15,7 @@ colors
 /* STYLES FOR DEFAULT BUTTON */
 
 button {
-    margin-top:8px;
+    margin-top:4px;
     padding:12px 16px;
     font-family:var(--font-heading);
     font-weight:bold;
