--- a/components/form.css
+++ b/components/form.css
@@ -13,7 +13,7 @@ label {
 
 input {
     font-size:1em;
-    padding:12.5px;
+    padding:10px;
     padding-bottom:14px;
     min-width:250px;
     font-family: var(--font-text);
